--- a/index.html
+++ b/index.html
@@ -4,9 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>WordGuessGame</title>
 </head>
 <body>
+    <h1>Press any key to start!</h1>
+
+    <p>Wins</p>
+
+    <p>Guesses Remaining</p>
+
+    <p>Letters Guessed</p>
     
 </body>
 </html>
